添加一些以前写的东西

--- a/蒙太奇/css/index.css
+++ b/蒙太奇/css/index.css
@@ -1,4 +1,7 @@
 #container{
+	width: 480px;
+	height: 320px;
+	background: red;
 	-webkit-filter:blur(10px);
 	   -moz-filter:blur(10px);
 	     -o-filter:blur(10px);
